--- a/public/main.css
+++ b/public/main.css
@@ -3,6 +3,37 @@
   font-family: 'Raleway', sans-serif;
 }
 
+nav {
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  height: 70px;
+  background-color: rgba(255,255,255,.8);
+  z-index: 1;
+}
+
+#nav-list {
+  position: relative;
+  bottom: 20px;
+}
+
+#nav-list li {
+  display: inline-block;
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+#nav-list li a {
+  color:black;
+  text-decoration: none;
+}
+
+#nav-logo {
+  font-size: 20px;
+  margin-right: 20px;
+}
+
 /*
 Copyright (c) 2016 by Ragoli (http://codepen.io/Glucio/pen/BoLWPo)
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
@@ -20,13 +51,13 @@ ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEAL
 
 #title {
   position: absolute;
-  top: 40%;
+  top: 45%;
   left: 0;
   right: 0;
   color: #FFF;
   text-align: center;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 70px;
   letter-spacing: 5px;
   margin-top: -60px;
   padding-left: 10px;
@@ -37,7 +68,7 @@ ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEAL
 
 html {
   height: 100%;
-  background: radial-gradient(ellipse at bottom, #1d5484 0%, #000 100%);
+  background: radial-gradient(ellipse at bottom, #001333 0%, #000 100%);
   overflow: hidden;
 }
 
