added nav-left class and moved them to the left

--- a/public/main.css
+++ b/public/main.css
@@ -40,6 +40,11 @@ nav {
   text-decoration: none;
 }
 
+.nav-left {
+  position: relative;
+  right:20px;
+}
+
 .nav-right {
   float:right;
   margin-top: 27px;
