--- a/public/main.css
+++ b/public/main.css
@@ -52,6 +52,7 @@ section {
   padding: 15px 10px;
   cursor: pointer;
   display: none;
+  height:60px;
 }
 
 @media screen and (max-width: 840px) {
