--- a/public/main.css
+++ b/public/main.css
@@ -85,7 +85,7 @@ nav ul .nav-hover:hover {
 }
 
 /* ===================== MEDIA QUERIES====================== */
-@media screen and (min-width: 930px) {
+@media screen and (min-width: 945px) {
   #demo-button {
     font-family: 'Raleway', sans-serif;
     position: relative;
@@ -101,7 +101,7 @@ nav ul .nav-hover:hover {
   }
 }
 
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 945px) {
   nav ul {
     max-height: 0;
     background-color: rgba(255,255,255,.93);
@@ -133,7 +133,7 @@ nav ul .nav-hover:hover {
   }
 }
 /* ========================================================== */
-/* ========================== Navigation Styling End ============================== */
+
 
 section {
   line-height: 1.5em;
@@ -169,9 +169,9 @@ section {
 }
 
 #about {
-  height:450px;
+  padding-bottom: 150px;
   width: 100%;
-  background: radial-gradient(ellipse at bottom, #0059a8 0%, #000e1e 100%);
+  background: #F8F9FA;
   text-align: center;
 }
 
@@ -182,9 +182,9 @@ section {
 }
 
 #journal {
-  height:450px;
+  padding-bottom: 150px;
   width: 100%;
-  background: radial-gradient(ellipse at bottom, #6bb0ff 0%, #0059a8 100%);
+  background: #e0ecff;
   text-align: center;
 }
 
