--- a/public/main.css
+++ b/public/main.css
@@ -195,7 +195,7 @@ section {
 }
 
 #analyze {
-  height:450px;
+  padding-bottom: 150px;
   width: 100%;
   background: radial-gradient(ellipse at bottom, #bcdbff 0%, #6bb0ff 100%);
   text-align: center;
@@ -208,7 +208,7 @@ section {
 }
 
 #sign-up {
-  height:450px;
+  padding-bottom: 150px;
   width: 100%;
   background: radial-gradient(ellipse at bottom, #eff6ff 0%, #bcdbff 100%);
   text-align: center;
