--- a/public/main.css
+++ b/public/main.css
@@ -94,6 +94,7 @@ nav ul .nav-hover:hover {
     background-color: #82c4ff;
     color:white;
     border:none;
+    transition-duration: 200ms;
   }
 
   #demo-button:hover {
@@ -226,6 +227,73 @@ section {
   position:relative;
   top:15px;
   margin-bottom: 30px;
+}
+
+/* ======================== Sign Up Box ======================== */
+
+.sign-up-box {
+  width:400px;
+  height: 450px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+}
+
+.sign-up {
+  padding-top: 15px;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 35px;
+  color: #595959;
+}
+
+.register fieldset {
+  border: none;
+  margin-left:0px;
+  padding-left: 0px;
+}
+
+.register label {
+  display: block;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+.register input {
+  font-family: 'Raleway', sans-serif;
+  width: 320px;
+  height: 55px;
+  border: 2px solid #d8d8d8;
+  border-radius: 3px;
+  padding:15px;
+  font-size: 20px;
+  font-weight:bold;
+  background-color: #f9f9f9;
+  margin-bottom: 20px;
+  margin-top: 15px;
+}
+
+
+button {
+  width: 320px;
+  height: 55px;
+  padding:15px;
+  border:none;
+  border-radius: 3px;
+  background-color: #82c4ff;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  color:white;
+  font-size: 20px;
+  transition-duration: 200ms;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #2699ff;
 }
 
 
