--- a/public/main.css
+++ b/public/main.css
@@ -182,6 +182,9 @@ section {
   -webkit-text-fill-color: transparent;
 }
 
+h2 {
+  font-weight: normal;
+}
 
 #home {
   padding-bottom: 150px;
@@ -193,7 +196,6 @@ section {
 #home p {
   color: #FFF;
   text-align: center;
-  font-weight: 700;
   font-size: 20px;
 }
 
@@ -206,12 +208,6 @@ section {
   z-index: 1;
 }
 
-#about h2 {
-  position:relative;
-  top:15px;
-  margin-bottom: 30px;
-}
-
 #journal {
   padding-bottom: 150px;
   width: 100%;
@@ -219,12 +215,6 @@ section {
   text-align: center;
   position: relative;
   z-index: 1;
-}
-
-#journal h2 {
-  position:relative;
-  top:15px;
-  margin-bottom: 30px;
 }
 
 #analyze {
@@ -236,12 +226,6 @@ section {
   z-index: 1;
 }
 
-#analyze h2 {
-  position:relative;
-  top:15px;
-  margin-bottom: 30px;
-}
-
 #sign-up {
   padding-bottom: 150px;
   width: 100%;
@@ -249,12 +233,6 @@ section {
   text-align: center;
   position: relative;
   z-index: 1;
-}
-
-#sign-up h2 {
-  position:relative;
-  top:15px;
-  margin-bottom: 30px;
 }
 
 /* ======================== Sign Up Box ======================== */
