--- a/public/main.css
+++ b/public/main.css
@@ -108,6 +108,7 @@ nav ul .nav-hover:hover {
   position: fixed;
   background-color: #fff;
   width: 70%;
+  height: 225px;
   max-width:400px;
   left: 50%;
   padding: 20px;
@@ -166,6 +167,58 @@ nav ul .nav-hover:hover {
   -moz-transition: -moz-transform 200ms ease-out;
   -o-transition: -o-transform 200ms ease-out;
   transition: transform 200ms ease-out;
+}
+
+
+
+.login-form fieldset {
+  border: none;
+  padding: 0;
+}
+
+.login-form input {
+  font-family: 'Raleway', sans-serif;
+  width: 100%;
+  border: 2px solid #d8d8d8;
+  border-left: none;
+  border-top: none;
+  border-right:none;
+  padding:2px 0;
+  font-size: 20px;
+  background-color: transparent;
+  margin-bottom: 20px;
+  margin-top: 15px;
+}
+
+.login-form input:focus {
+    outline: none;
+    border-bottom-color: #82c4ff;
+}
+
+.log-in-button {
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+  padding:15px;
+  border:none;
+  border-radius: 3px;
+  background-color: #82c4ff;
+  font-family: 'Raleway', sans-serif;
+  color:white;
+  font-size: 100%;
+  transition-duration: 200ms;
+  cursor: pointer;
+}
+
+.fa-times {
+  position: relative;
+  bottom: 185px;
+  float:right;
+  cursor: pointer;
+}
+
+.red {
+  background-color: red;
 }
 
 /* ===================== MEDIA QUERIES====================== */
@@ -328,7 +381,6 @@ h2 {
   font-family: 'Raleway', sans-serif;
   width: 320px;
   border: 2px solid #d8d8d8;
-  border-radius: 3px;
   border-left: none;
   border-top: none;
   border-right:none;
