--- a/public/main.css
+++ b/public/main.css
@@ -27,7 +27,8 @@ nav ul {
   text-align: center;
   margin: 0;
   padding:0;
-  color:white;  
+  color:white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
   letter-spacing: .5px;
   -webkit-transition: max-height 0.4s;
   -ms-transition: max-height 0.4s;
