--- a/public/main.css
+++ b/public/main.css
@@ -8,7 +8,7 @@ html {
   background: radial-gradient(ellipse at bottom, #002249 0%, #000 100%);
 }
 
-/* ========================== Navigation Styling ============================== */
+/* ========================== Navigation Styling For Index ============================== */
 nav {
   position: fixed;
   top:0;
