--- a/public/dreams.css
+++ b/public/dreams.css
@@ -43,6 +43,7 @@ nav h1 {
 	margin-top: 5px;
 	padding: 5px 10px;
 	cursor: pointer;
+	transition: all 300ms;
 }
 
 .accordion dt:before {
@@ -58,10 +59,11 @@ nav h1 {
 
 .accordion dt.open:before {
 	content: '\2013'; 
+	margin-right: 8px;
 }
 
 .accordion dd {
-	border: 1px solid DeepSkyBlue;
+	border: 1px solid grey;
 	border-top: none;
 	border-radius: 0 0 7px 7px;
 	padding: 5px;
