--- a/public/dreams.css
+++ b/public/dreams.css
@@ -17,8 +17,6 @@ nav h1 {
 	bottom: 15px;
 }
 
-/* ============================== STYLING FOR DREAMS PAGE ========================== */
-
 .main-container {
 /*	background-color: #cecece; */
 	width: 100%;
@@ -35,41 +33,81 @@ nav h1 {
 }
 
 .accordion dt {
-	background: DeepSkyBlue;
-	border-bottom: 1px solid DodgerBlue;
-	border-radius: 7px;
+	background: #82c4ff;
+/*	border-bottom: 1px solid DodgerBlue; */
+/*	border-radius: 7px; */
 	color: white;
-	font-size: 22px;
-	margin-top: 5px;
+	font-size: 15px;
+	margin-top: 8px;
 	padding: 5px 10px;
+	height: 50px;
 	cursor: pointer;
 	transition: all 300ms;
 }
 
 .accordion dt:before {
-	content: '+';
-	margin-right: 7px;
+	content: '\f067';
+	font-family: FontAwesome;
+	margin-right: 15px;
+	font-size: 40px;
 }
 
 .accordion dt.open {
-	background-color: grey;
+	background-color: #2699ff;
 	border-bottom-color: black;
-	border-radius: 7px 7px 0 0;
+/*	border-radius: 7px 7px 0 0; */
 }
 
 .accordion dt.open:before {
-	content: '\2013';
-	margin-right: 8px;
+	content: '\f068';
+	font-family: FontAwesome;
+	margin-right: 15px;
+	font-size: 40px;
 }
 
 .accordion dd {
 	border: 1px solid grey;
 	border-top: none;
-	border-radius: 0 0 7px 7px;
+/*	border-radius: 0 0 7px 7px; */
 	padding: 5px;
 }
 
-.edit-icon {
+.dream-date {
 	float:right;
-	margin-top: 3px;
+	margin-top: 10px;
+}
+
+blockquote {
+    font-family: Georgia, serif;
+    position: relative;
+    margin: 0.5em;
+    padding: 0.5em 2em 0.5em 3em;
+}
+/* Thanks: http://callmenick.com/post/styling-blockquotes-with-css-pseudo-classes */
+blockquote:before {
+    font-family: Georgia, serif;
+    position: absolute;
+    font-size: 6em;
+    line-height: 1;
+    top: 0;
+    left: 0;
+    content: "\201C";
+}
+blockquote:after {
+    font-family: Georgia, serif;
+    position: absolute;
+   /* display: block; don't use this, it raised the quote too high from the bottom - defeated line-height? */
+    float:right;
+    font-size:6em;
+    line-height: 1;
+    right:0;
+    bottom:-0.5em;
+    content: "\201D";
+}
+blockquote footer {
+    padding: 0 2em 0 0;
+    text-align:right;
+}
+blockquote cite:before {
+    content: "\2013";
 }
