--- a/public/dreams.css
+++ b/public/dreams.css
@@ -1,5 +1,6 @@
 * {
 	box-sizing: border-box;
+	font-family: 'Raleway', sans-serif;
 }
 
 nav {
@@ -37,10 +38,9 @@ nav h1 {
 /*	border-bottom: 1px solid DodgerBlue; */
 /*	border-radius: 7px; */
 	color: white;
-	font-size: 15px;
+	font-size: 20px;
 	margin-top: 8px;
 	padding: 5px 10px;
-	height: 50px;
 	cursor: pointer;
 	transition: all 300ms;
 }
@@ -50,6 +50,8 @@ nav h1 {
 	font-family: FontAwesome;
 	margin-right: 15px;
 	font-size: 40px;
+	position: relative;
+	top: 2px;
 }
 
 .accordion dt.open {
@@ -72,13 +74,20 @@ nav h1 {
 	padding: 5px;
 }
 
+.dream-title {
+	position: relative;
+	bottom: 7px;
+}
+
 .dream-date {
 	float:right;
-	margin-top: 10px;
+	margin-top: 12px;
+	font-weight: bold;
+	font-size: 20px;
 }
 
 blockquote {
-    font-family: Georgia, serif;
+    font-family: 'Raleway', sans-serif;
     position: relative;
     margin: 0.5em;
     padding: 0.5em 2em 0.5em 3em;
