--- a/public/dreams.css
+++ b/public/dreams.css
@@ -43,6 +43,7 @@ nav h1 {
 	padding: 5px 10px;
 	cursor: pointer;
 	transition: all 300ms;
+	position: relative;
 }
 
 .accordion dt:before {
@@ -74,17 +75,21 @@ nav h1 {
 	padding: 5px;
 }
 
+
 .dream-title {
-	position: relative;
-	bottom: 7px;
+	display: inline-block;
+	width: 85%;
+	padding-right: 5px;
 }
 
 .dream-date {
-	float:right;
-	margin-top: 12px;
-	font-weight: bold;
-	font-size: 20px;
+	display: inline-block;
+/*	width: 100%;
+	text-align: center; */
+/*	position: absolute;
+	right: 15px; */
 }
+
 
 blockquote {
     font-family: 'Raleway', sans-serif;
@@ -119,4 +124,18 @@ blockquote footer {
 }
 blockquote cite:before {
     content: "\2013";
+}
+
+.dream-info {
+	display: inline-block;
+	width: 33.33333%;
+	text-align: center;
+}
+
+.edit-icon {
+	color: black;
+	text-decoration: none;
+	background-color: #3281ff;
+	padding: 5px;
+	border-radius: 3px;
 }
