--- a/public/dreams.css
+++ b/public/dreams.css
@@ -3,6 +3,10 @@
 	font-family: 'Raleway', sans-serif;
 }
 
+body {
+	background-color: #e8e8e8;
+}
+
 nav {
 	position: fixed;
 	top:0;
@@ -11,6 +15,7 @@ nav {
 	height: 50px;
 	background-color: #cecece;
 	text-align: center;
+	z-index: 5;
 }
 
 nav h1 {
@@ -52,7 +57,7 @@ nav h1 {
 	margin-right: 15px;
 	font-size: 40px;
 	position: relative;
-	top: 2px;
+	top: 9px;
 }
 
 .accordion dt.open {
@@ -69,6 +74,7 @@ nav h1 {
 }
 
 .accordion dd {
+	background-color: white;
 	border: 1px solid grey;
 	border-top: none;
 /*	border-radius: 0 0 7px 7px; */
@@ -130,12 +136,30 @@ blockquote cite:before {
 	display: inline-block;
 	width: 33.33333%;
 	text-align: center;
+	font-weight: bold;
+	color: #353535;
+	font-size: 18px;
+}
+
+.full-stats {
+	border: 2px solid black;
+	padding: 5px;
+	border-radius: 4px;
 }
 
 .edit-icon {
 	color: black;
 	text-decoration: none;
-	background-color: #3281ff;
+/*	background-color: #2699ff;
+	border: 2px solid black;
 	padding: 5px;
-	border-radius: 3px;
+	border-radius: 4px;*/
+}
+
+.edit-icon:hover {
+	color: #2699ff;
+}
+
+.stats {
+	color: #2699ff;
 }
