--- a/public/new-dream.css
+++ b/public/new-dream.css
@@ -7,6 +7,12 @@ body {
   background-color:#f1f1f1;
 }
 
+h1 {
+  margin-left: 65px;
+  margin-bottom: 5px;
+  font-weight: normal;
+}
+
 fieldset {
   width: 60%;
   display: inline-block;
@@ -38,38 +44,68 @@ textarea {
   display: inline-block;
   width: 30%;
   position: relative;
-  bottom: 40px;
+  bottom:20px;
 }
 
-.hours-slept {
+.hours-slept-box {
   font-size: 25px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+}
+
+.hours-slept-box p {
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 #hours-slept-input {
-  width:35px;
+  width:40px;
   text-align: center;
   font-family: 'Raleway', sans-serif;
+  font-size: 20px;
   border: solid 1px #c4c4c4;
   border-radius: 2px;
 }
 
-.dream-type-header {
-  font-size: 25px;
-  margin-bottom: 5px;
+.dream-type-box {
+  line-height: 25px;
 }
 
-.dream-type {
-  line-height: 25px;
-  margin-bottom: 20px;
+.dream-type-header {
+  font-size: 25px;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 .dream-type-select {
   cursor: pointer;
 }
 
+.dream-date-box {
+  position: relative;
+  bottom: 10px;
+  margin-bottom:10px;
+}
+
 .dream-date-header {
   font-size: 25px;
-  padding-bottom: 10px;
+  margin-bottom: 5px;
+}
+
+.date-month {
+  height: 23.5px;
+}
+
+.date-day {
+  width: 30px;
+  text-align: center;
+}
+
+.date-year {
+  width: 50px;
+  text-align: center;
 }
 
 #date {
@@ -80,15 +116,23 @@ textarea {
   padding-left: 7px;
 }
 
-option[value=""][disabled] {
-  display: none;
-}
-
 .submit-reset {
   display: inline-block;
   width: 80%;
+  text-align: center;
 }
 
 .publish {
   width: 100%;
+}
+
+.reset {
+  background-color: transparent;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 12px;
+  color: red;
+  position: relative;
+  top: 10px;
 }
