--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -1,9 +1,28 @@
 * {
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
+  text-align: center;
+}
+
+nav {
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  height: 50px;
+  background-color: #cecece;
+  text-align: center;
+  z-index: 5;
+}
+
+.lineChartBox {
+  margin-top: 80px;
 }
 
 .doughnutChartBox {
-  width: 80%;
+  margin-top: 80px;
 }
 
+.stat-title {
+  margin-bottom: 0;
+}
