--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -15,12 +15,12 @@ nav {
   z-index: 5;
 }
 
-.lineChartBox {
+/*.lineChartBox {
   margin-top: 50px;
-}
+}*/
 
 .doughnutChartBox {
-  margin-bottom: 25px;
+  margin-top: 70px;
 }
 
 .stat-title {
@@ -28,8 +28,13 @@ nav {
 }
 
 .userStatsBox {
-  margin-top: 20px;
+  margin-top: 80px;
 }
+
+.userStatsBox h2 {
+  margin-top: 30px;
+}
+
 
 .stat {
   font-size: 40px;
@@ -40,4 +45,13 @@ nav {
 .tracked-dreams-footer, .lucid-dream-footer, .total-hours-footer, .avg-sleep-footer {
   margin-top: 0;
   margin-bottom: 35px;
+}
+
+@media only screen and (max-width: 640px) {
+  .userStatsBox {
+    margin-top: 50px;
+    border-top: solid grey;
+    border-bottom: solid grey;
+    border-width: 80%;
+  }
 }
