--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -15,10 +15,6 @@ nav {
   z-index: 5;
 }
 
-/*.lineChartBox {
-  margin-top: 50px;
-}*/
-
 .doughnutChartBox {
   margin-top: 70px;
 }
@@ -45,6 +41,10 @@ nav {
 .tracked-dreams-footer, .lucid-dream-footer, .total-hours-footer, .avg-sleep-footer {
   margin-top: 0;
   margin-bottom: 35px;
+}
+
+.lineChartBox {
+  margin-bottom: 50px;
 }
 
 @media only screen and (max-width: 640px) {
