--- a/public/dreams.css
+++ b/public/dreams.css
@@ -18,16 +18,29 @@ nav {
 	z-index: 5;
 }
 
+a {
+  text-decoration: none;
+  color:inherit;
+}
+
 nav ul {
   background-color: #82d1ff;
   overflow: hidden;
-  color: #e8e8e8;
+  color: white;
   padding: 0;
   text-align: center;
+  margin: 0;
 }
 
 nav ul li {
+  display: inline-block;
+  padding: 20px;
+  transition: all .5s ease;
+  font-size: 24px;
+}
 
+nav ul li:hover {
+  background-color: #707070;
 }
 
 /*=============================== NAV BAR ============================= */
@@ -91,7 +104,7 @@ nav ul li {
 	background-color: white;
 	border: 1px solid grey;
 	border-top: none;
-/*	border-radius: 0 0 7px 7px; */
+  line-height: 1.5em;
 	padding: 5px;
 }
 
