--- a/public/new-dream.css
+++ b/public/new-dream.css
@@ -12,15 +12,33 @@ nav {
   top:0;
   left:0;
   right:0;
-  height: 50px;
-  background-color: #cecece;
   text-align: center;
   z-index: 5;
 }
 
-nav h1 {
-  position: relative;
-  bottom: 15px;
+a {
+  text-decoration: none;
+  color:inherit;
+}
+
+nav ul {
+  background-color: #82d1ff;
+  overflow: hidden;
+  color: white;
+  padding: 0;
+  text-align: center;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 20px;
+  transition: all .5s ease;
+  font-size: 24px;
+}
+
+nav ul li:hover {
+  background-color: #707070;
 }
 
 .title {
