--- a/public/dreams.css
+++ b/public/dreams.css
@@ -99,11 +99,15 @@ nav ul li:hover {
   font-weight: normal;
 }
 
+.page-title {
+  margin-top: 100px;
+  text-align: center;
+  font-weight: normal;
+}
+
 .main-container {
-/*	background-color: #cecece; */
 	width: 100%;
 	height: auto;
-	margin-top: 100px;
 	margin-bottom: 50px;
 }
 
@@ -115,16 +119,15 @@ nav ul li:hover {
 }
 
 .accordion dt {
-	background: #82c4ff;
-/*	border-bottom: 1px solid DodgerBlue; */
-/*	border-radius: 7px; */
-	color: white;
+	background: transparent;
+	color: #333333;
 	font-size: 20px;
-	margin-top: 8px;
+	margin-top: 15px;
 	padding: 5px 10px;
 	cursor: pointer;
 	transition: all 300ms;
 	position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .accordion dt:before {
@@ -136,10 +139,10 @@ nav ul li:hover {
 	top: 9px;
 }
 
+/* Title Color Change */
 .accordion dt.open {
-	background-color: #2699ff;
+	background-color: #82d1ff;
 	border-bottom-color: black;
-/*	border-radius: 7px 7px 0 0; */
 }
 
 .accordion dt.open:before {
@@ -151,10 +154,11 @@ nav ul li:hover {
 
 .accordion dd {
 	background-color: white;
-	border: 1px solid grey;
+	/*border: 1px solid grey;*/
 	border-top: none;
   line-height: 1.5em;
 	padding: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -166,10 +170,6 @@ nav ul li:hover {
 
 .dream-date {
 	display: inline-block;
-/*	width: 100%;
-	text-align: center; */
-/*	position: absolute;
-	right: 15px; */
 }
 
 
