--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -15,6 +15,7 @@ nav {
   right:0;
   text-align: center;
   z-index: 5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 a {
