--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
   text-align: center;
+  font-weight: normal;
 }
 
 body {
@@ -108,6 +109,7 @@ nav ul li:hover {
 
 .userStatsBox {
   letter-spacing: 1px;
+  margin-top: 20px;
 }
 
 .stat {
