--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -136,3 +136,9 @@ nav ul li:hover {
     border-width: 80%;
   }
 }
+
+@media only screen and (min-width: 640px) {
+  .doughnutChartBox {
+    margin-left: 50px;
+  }
+}
