--- a/public/dreams.css
+++ b/public/dreams.css
@@ -215,7 +215,6 @@ blockquote cite:before {
 	display: inline-block;
 	width: 25%;
 	text-align: center;
-	font-weight: bold;
 	color: #353535;
 	font-size: 18px;
 }
@@ -236,6 +235,7 @@ blockquote cite:before {
   -moz-transition: all .2s ease;
   -o-transition: all .2s ease;
   transition: all .2s ease;
+  font-weight: bolder;
 }
 
 .edit-button:hover {
