--- a/public/index.css
+++ b/public/index.css
@@ -382,6 +382,10 @@ h2 {
   position: relative;
 }
 
+.journal-img-mobile {
+  display: none;
+}
+
 .journal-img {
   display: inline-block;
   width: 60%;
@@ -403,25 +407,6 @@ h2 {
 .dreams-example {
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-@media only screen and (max-width: 768px) {
-  #about {
-    padding: 0;
-  }
-
-  .about-text {
-    width: 100%;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    padding: 0;
-  }
-
-  .about-img {
-    display: none;
-  }
-
 }
 
 #analyze {
@@ -463,6 +448,10 @@ h2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.statistics-example-mobile {
+  display: none;
+}
+
 .sleep-img {
   text-align: center;
   position: relative;
@@ -483,6 +472,91 @@ h2 {
   position: relative;
   overflow: hidden;
   z-index: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  #about {
+    padding: 0;
+  }
+
+  .about-text {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0;
+  }
+
+  .about-img {
+    display: block;
+    width: 70%;
+    margin: 0 auto;
+    padding: 0;
+    float: none;
+  }
+
+  .journal-text {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0;
+  }
+
+  .journal-img {
+    display: none;
+  }
+
+  .journal-img-mobile {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 0;
+  }
+
+  .analyze-text {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0;
+  }
+
+  .analyze-img {
+    display: none;
+  }
+
+  .analyze-img-mobile {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 0;
+    float: none;
+  }
+
+  .statistics-example {
+    display: none;
+  }
+
+  .statistics-example-mobile {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 0;
+    float: none;
+  }
+
+  .sleep-example {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+    bottom: 20px;
+  }
+
 }
 
 /* ======================== Sign Up Box ======================== */
